fix: wrap transition into prefers-reduced-motion media

--- a/src/pages/Catalog/components/categories/Categories.module.scss
+++ b/src/pages/Catalog/components/categories/Categories.module.scss
@@ -12,7 +12,10 @@
   .child {
     padding-left: 32px;
     color: var(--text-color);
-    transition: color var(--duration) ease-in-out;
+
+    @media (prefers-reduced-motion: no-preference) {
+      transition: color var(--duration) ease-in-out;
+    }
   }
 
   .parent__wrapper {
@@ -23,7 +26,10 @@
 
     .parent {
       color: var(--primary-color, #758963);
-      transition: color var(--duration) ease-in-out;
+
+      @media (prefers-reduced-motion: no-preference) {
+        transition: color var(--duration) ease-in-out;
+      }
     }
   }
 
